<resources>
    <string name="app_name">calculatrice</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_00">00</string>
    <string name="prime">prime</string>
    <string name="cos">cos</string>
    <string name="log">log</string>
    <string name="e">e</string>
    <string name="sin_1">sin-1</string>
    <string name="sin">sin</string>
    <string name="pi">pi</string>
    <string name="tan">tan</string>
    <string name="racine">√</string>
    <string name="vAbsolut">|x|</string>
    <string name="equal">=</string>
    <string name="module">%</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="dot">.</string>
    <string name="divide">/</string>
    <string name="multiple">*</string>
    <string name="soustraction">-</string>
    <string name="add">+</string>
    <string name="back"><![CDATA[>>]]></string>
    <string name="clear">C</string>
    <string name="x2">x2</string>
    <string name="cos_1">cos-1</string>
    <string name="ln">ln</string>
    <string name="xy">xy</string>
    <string name="tan_1">tan-1</string>
    <string name="leftPare">(</string>
    <string name="rightPare">)</string>
</resources>