<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/expression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ems="10"
            android:background="@color/white"
            android:cursorVisible="false"
            android:focusable="false"
            android:gravity="end"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:background="@color/white"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:gravity="end"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="365dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/rose"
                android:layout_marginBottom="20dp"
                style="@style/Button"
                android:text="@string/clear" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                style="@style/Button"
                android:text="@string/_7" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/Button"
                android:layout_marginBottom="20dp"
                android:text="@string/_4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/Button"
                android:layout_marginBottom="20dp"
                android:text="@string/_1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/Button"
                android:layout_marginBottom="20dp"
                android:text="@string/_0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                style="@style/btnOperation"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/back" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:layout_marginBottom="20dp"
                android:text="@string/_8" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                style="@style/Button"
                android:text="@string/_5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:layout_marginBottom="20dp"
                android:text="@string/_2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zerozero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:layout_marginBottom="20dp"
                android:text="@string/_00" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/module"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                style="@style/btnOperation"
                android:layout_marginBottom="20dp"
                android:text="@string/module" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                style="@style/Button"
                android:text="@string/_9" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:layout_marginBottom="20dp"
                android:text="@string/_6" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:layout_marginBottom="20dp"
                android:text="@string/_3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:layout_marginBottom="20dp"
                android:text="@string/dot" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/divide"
                style="@style/btnOperation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/black"
                android:text="@string/divide" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/multiple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@color/black"
                style="@style/btnOperation"
                android:layout_marginBottom="20dp"
                android:text="@string/multiple" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/soustraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                style="@style/btnOperation"
                android:layout_marginBottom="20dp"
                android:text="@string/soustraction" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                style="@style/btnOperation"
                android:layout_marginBottom="20dp"
                android:text="@string/add" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/equal"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/green"
                android:textColor="@color/white"
                android:text="@string/equal" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>